@startuml
skinparam classAttributeIconSize 0
hide circle 

class GymStation {
    # stationName: String
    # sets: ArrayList<GymSet>
    # numberOfSets: int

    # GymStation(name: String, numberOfSet: int, numberOfRepetition: int,
    weightsList: ArrayList<Double>)
    # getStationName(): String
    # getSets(): ArrayList<GymSet>
    # getNumberOfSets(): int
}

class GymSet {
    - weight: double
    - numberOfRepetitions: int

    + GymSet(weight: Double, numberOfRepetitions: int)
    + getWeight(): double
    + getNumberOfRepetitions(): int
}

Gym *-- "1..*" GymStation: contains
GymStation *-- "1..*" GymSet: contains
@enduml